@@ -6,14 +6,17 @@ import static org.molgenis.emx2.FilterBean.f;
 import static org.molgenis.emx2.FilterBean.or;
 import static org.molgenis.emx2.Operator.EQUALS;
 import static org.molgenis.emx2.Row.row;
+import static org.molgenis.emx2.SelectColumn.s;
 import static org.molgenis.emx2.TableMetadata.table;
 import static org.molgenis.emx2.utils.TypeUtils.millisecondsToLocalDateTime;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.File;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import org.jooq.Result;
 import org.molgenis.emx2.*;
@@ -85,7 +88,9 @@ public class TaskServiceInDatabase extends TaskServiceInMemory {
           }
         });
     try {
-      return (new ObjectMapper().readValue(json.toString(), Task.class));
+      ObjectMapper mapper = new ObjectMapper();
+      mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+      return (mapper.readValue(json.toString(), Task.class));
     } catch (Exception e) {
       throw new MolgenisException("getTask(" + id + ") failed", e);
     }
@@ -121,13 +126,26 @@ public class TaskServiceInDatabase extends TaskServiceInMemory {
   }
 
   private ScriptTask retrieveTaskFromDatabase(Schema systemSchema, String scriptName) {
-    List<Row> rows =
-        systemSchema.getTable("Scripts").where(f("name", EQUALS, scriptName)).retrieveRows();
+    Table table = systemSchema.getTable("Scripts");
+    List<Row> rows = table.where(f("name", EQUALS, scriptName)).retrieveRows();
     if (rows.size() != 1) {
       throw new MolgenisException("Script " + scriptName + " not found");
     }
+    Row scriptMetadata = rows.getFirst();
 
-    Row scriptMetadata = rows.get(0);
+    String columnName = "extraFile";
+    String fileId = scriptMetadata.getString("extraFile");
+    List<Row> fileRows =
+        table
+            .query()
+            .select(s(columnName, s("contents"), s("mimetype"), s("filename"), s("extension")))
+            .where(f(columnName, f("id", EQUALS, fileId)))
+            .retrieveRows();
+    byte[] fileContents = new byte[0];
+    if (!fileRows.isEmpty()) {
+      fileContents = fileRows.getFirst().getBinary(columnName + "_contents");
+    }
+    scriptMetadata.set(columnName + "_contents", fileContents);
     return new ScriptTask(scriptMetadata);
   }
 
@@ -204,6 +222,14 @@ public class TaskServiceInDatabase extends TaskServiceInMemory {
                       .setType(ColumnType.EMAIL)
                       .setDescription("Email address to be notified when a job fails"));
             }
+            if (!scriptsMetadata.getColumnNames().contains("extraFile")) {
+              scriptsMetadata.add(
+                  column("extraFile")
+                      .setLabel("extra file")
+                      .setType(ColumnType.FILE)
+                      .setDescription(
+                          "Upload a file required for running the script. A ZIP file will be automatically extracted."));
+            }
           } else {
             Table scripTypes =
                 schema.create(table("ScriptTypes").setTableType(TableType.ONTOLOGIES));
@@ -221,7 +247,12 @@ public class TaskServiceInDatabase extends TaskServiceInMemory {
                         column("dependencies")
                             .setType(ColumnType.TEXT)
                             .setDescription(
-                                "For python, this should match requirements format for 'pip install -r requirements.txt'"),
+                                "For Python, this should match requirements format for 'pip install -r requirements.txt'"),
+                        column("extraFile")
+                            .setLabel("extra file")
+                            .setType(ColumnType.FILE)
+                            .setDescription(
+                                "Upload a file required for running the script. A ZIP file will be automatically extracted."),
                         column("outputFileExtension")
                             .setDescription("Extension, without the '.'. E.g. 'txt' or 'json'"),
                         column("disabled")
@@ -288,7 +319,7 @@ f.close()
                     "script",
                     demoScript,
                     "dependencies",
-                    "numpy==1.23.4", // it has a dependency :-)
+                    "numpy==2.2.4",
                     "type",
                     "python",
                     "outputFileExtension",
@@ -340,5 +371,12 @@ f.close()
 
   public Table getJobTable() {
     return database.getSchema(systemSchemaName).getTable("Jobs");
+  }
+
+  @Override
+  public Set<String> getJobIds() {
+    return getJobTable().retrieveRows().stream()
+        .map(row -> row.getString("id"))
+        .collect(Collectors.toSet());
   }
 }
